--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The index of programable contents.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/teramotodaiki/open-index/issues"
   },
-  "homepage": "https://github.com/teramotodaiki/open-index#readme"
+  "homepage": "https://github.com/teramotodaiki/open-index#readme",
+  "dependencies": {
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
